--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-This project is a guessing game to be completed in a group or alone. It focuses on closures. It is based on this blog post : http://fvanblog.blogspot.ca/2012/06/closures-with-focus-on-javascript.html
+This project is a guessing game to be completed in a group or alone. It focuses on closures and is written in javascript. It is based on this blog post : http://fvanblog.blogspot.ca/2012/06/closures-with-focus-on-javascript.html
 
 1. Go to https://github.com/fvan/ClosureDemo and click the zip button to download as a zip
 
